# Cryptography-ClientServer

./: CMakeLists.txt  CMakeSettings.json  README.md
client/: CMakeLists.txt  Client.cpp
crypto/: CMakeLists.txt  CryptoKey.h  Decryptor.cpp  Decryptor.h  Encryptor.cpp  Encryptor.h  ICrypto.h  crypto.cpp
server/: CMakeLists.txt  Server.cpp
